# dj01

./: crc_check  crc_check.cpp  crc_test.py  launch_all_nodes.sh  train.py  virtual_serial.py  virtual_serial_sender.py
net/CenterNet-master/src/lib/: opts.py
net/CenterNet-master/src/lib/datasets/dataset/: rm_robot.py
net/CenterNet-master/tools/: export_to_onnx.py
ref/: KalmanFilter.cpp  globalParam.hpp  number_classifier.cpp
ref/serialPort/include/: MessageManager.hpp
ref/serialPort/src/: MessageManager.cpp
src/aim_auto/: CMakeLists.txt  package.xml
src/aim_auto/include/aim_auto/: armor_pnp_solver.hpp  ekf_tracker.hpp  ref_detection.hpp  serial_port.hpp  serial_protocol.hpp
src/aim_auto/src/: armor_pnp_solver.cpp  detector_node.cpp  detector_ref_node.cpp  ekf_tracker.cpp  ref_detection.cpp  serial_bridge_node.cpp  serial_port.cpp  tracker_node.cpp
src/aimbot_combined/: CMakeLists.txt  package.xml
src/aimbot_combined/launch/: combined.launch.py
src/aimbot_combined/src/: combined_node.cpp
src/aimbot_msgs/: CMakeLists.txt  package.xml
src/aimbot_msgs/msg/: CameraImage.msg  Detection.msg  DetectionArray.msg  SerialFeedback.msg
src/camera/: CMakeLists.txt  package.xml
src/camera/src/: camera.cpp
src/config/: AimautoConfig.yaml  CameraConfig.yaml  DetectionConfig.yaml  WMConfigBlue.yaml  WMConfigBlue（备份）.yaml  WMConfigRed.yaml  WMConfigRed（备份）.yaml  WindmillConfig.yaml
src/model/: TestModelShape.py  best.xml  label.txt
src/simulation/: package.xml  setup.py
src/simulation/simulation/: armor_sim_node.py
